--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -7,6 +7,7 @@
     <mat-nav-list>
       <a mat-list-item href="/Vehiculos">Vehiculos</a>
       <a mat-list-item href="/Repuestos">Repuestos</a>
+      <a mat-list-item href="" (click)="cerrar()">Cerrar Sesión</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
